# mcp

./: CMakeLists.txt  LICENSE  README.md  TODO  framers.c  framers.h  stubs.h  test.c  use_openssl.c  use_zlib.c  utils.c  utils.h
mcp_extra/: CMakeLists.txt  TODO  framers.c  net.c  net.h  stubs.h  use_openssl.c
mcp_modern/: CMakeLists.txt  base.c  base.h
mcp_modern/base/: handshake.c  login.c  status.c
